# quick-gate-python

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  example-usage.yml
assets/: preview-source.txt  preview-spec.md
demo/artifacts/: run-metadata.json
